<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserSettingsActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="727dp"-->
<!--        android:layout_height="62dp"-->
<!--        android:layout_marginBottom="36dp"-->
<!--        android:autoText="false"-->
<!--        android:background="#1f6f78"-->
<!--        android:fontFamily="casual"-->
<!--        android:text="@string/task_master"-->
<!--        android:textAlignment="center"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--        android:textSize="48sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="Deprecated,MissingConstraints,TextViewEdits" />-->

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:hint="Enter your username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSaveUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home"
        android:contentDescription="BACK_HOME" />

    <Spinner
        android:id="@+id/spinner_user"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_user2"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_user"
        app:layout_constraintVertical_bias="0.208"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/changeStateButtonFilter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:paddingLeft="4px"
        android:paddingRight="4px"
        android:text="Apply"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_user"
        app:layout_constraintVertical_bias="0.595"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginBottom="12dp"
        android:text="Show tasks based on"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>