...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/userProfile"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
...
